# simple-job-scheduler

./: .env.example  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  readme.en.md
i18n/: en.json  ru.json
migrations/: 001_init.sql
src/: api.rs  config.rs  database.rs  execution.rs  i18n.rs  jobs.rs  logging.rs  main.rs  middleware.rs  models.rs  scheduler.rs  validation.rs
web/: cron-formatter.js  index.html  tailwindcss.js
