[package]
name = "simple-job-scheduler"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
boa_engine = "0.21"
chrono = { version = "0.4", features = ["serde"] }
cron = "0.16.0"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
